/*
 * $Id: ChangeLog,v 1.5398 2007/03/25 02:41:33 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-03-25 03:00 UTC-0300 Walter Negro <anegro/at/overnet.com.ar>
  * include/hbapi.h
  * include/hbapiitm.h
  * include/hbcomp.h
  * include/hbdate.h
  * include/hbexpra.c
  * include/hbexprb.c
  * include/hbexprop.h
  * include/hbmacro.h
  * include/hbpcode.h
  * include/hbset.h
  * include/hbstack.h
  * include/hbvm.h
  * include/hbvmpub.h
  * include/hbxvm.h
  * include/set.ch
  * include/std.ch
  * include/thread.h
  * source/common/expropt1.c
  * source/common/hbdate.c
  * source/compiler/genc.c
  * source/compiler/gencc.c
  * source/compiler/harbour.c
  * source/compiler/harbour.slx
  * source/compiler/harbour.sly
  * source/compiler/hbdead.c
  * source/compiler/hbfix.c
  * source/compiler/hblbl.c
  * source/compiler/hbpcode.c
  * source/compiler/hbpcstat.c
  * source/compiler/hbstripl.c
  * source/macro/macro.slx
  * source/macro/macro.y
  * source/rtl/dateshb.c
  * source/rtl/descend.c
  * source/rtl/empty.c
  * source/rtl/hbsrlraw.c
  * source/rtl/minmax.c
  * source/rtl/samples.c
  * source/rtl/set.c
  * source/rtl/Makefile
  * source/vm/arrays.c
  * source/vm/arrayshb.c
  * source/vm/asort.c
  * source/vm/estack.c
  * source/vm/extend.c
  * source/vm/hash.c
  * source/vm/hvm.c
  * source/vm/itemapi.c
  * source/vm/macro.c
  * source/vm/memvars.c
  * utils/hbmake/hbmutils.prg
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.gc
  * hrbdll.pc
  * hrbdll.vc
  * hrbdll.wc
  + tests/dates5.prg
  - source/rtl/dates.c

    Added support for datetime values.

2007-03-24 19:40 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/pp/ppcore.c
    * Corrected hb_pp_tokenCanStartExp() to return FALSE for inline seperator ';'